--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -20,6 +21,10 @@ main section {
 }
 body {
     background-color: #fcfbfb; 
+    font-size: 22px;
+    font-family: Raleway, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: rgb(153, 181, 231);
@@ -31,6 +36,13 @@ nav a:hover {
 .book, .join {
     background-color: aqua;
     text-decoration: none;
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;  
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: aqua;
@@ -61,5 +73,46 @@ footer p {
 } 
 footer p a:hover {
     text-decoration: underline;
-}    
-     
+}  
+#hero-msg h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.home-title {
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+}
+.msg {
+    background-color: #6f7364;
+    line-height: 1.5em;
+}
+.msg p {
+    font-size: 2rem;
+}
+h2 {
+    margin: 0;
+}
+nav a {
+    text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+    padding: 35px;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
+}
+.home-title {
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+}
+.home-grid {
+    margin: 20px;
+}
+.rivers-card , .camping-card , .rapids-card {
+    margin: 30px;
+}
+.mountains {
+    margin: 30px;
+}
