--- a/positionstyles.css
+++ b/positionstyles.css
@@ -94,40 +94,42 @@
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 .red4 {
   background-color: red; 
-
-  width: 30%; /* Red stripe width */
-  height: 100%;
-
+  width: 50%; 
+  height: 100%; 
+  grid-area: 1 / 1 / 4 / 2;
+  margin: 0;
 } 
 .green4 {
   background-color: green;
-  grid-column: 1/3;
-  margin-top: auto;
+  width: 50%; 
+  height: 100%; 
+  margin: 0;
 
-  width: 70%; /* Yellow stripe width */
-  height: 50%;
+  grid-area: 1 / 2 / 2 / 3;
 } 
 .yellow4 {
   background-color: gold; 
-  grid-column: 1/3;
+  width: 50%; 
+  height: 100%; 
+  margin: 0;
 
-  width: 70%; /* Yellow stripe width */
-  height: 50%;
+  grid-area: 2 / 2 / 3 / 3;
 } 
 .blue4 {
   background-color: blue; 
-  grid-column: 1/3;
+  width: 50%; 
+  height: 100%; 
+  margin: 0;
 
-  width: 70%; /* Yellow stripe width */
-  height: 50%;
+  grid-area: 3 / 2 / 4 / 3;
 } 
 /* Activity 5 styles */ 
 .content5 {
