--- a/positionstyles.css
+++ b/positionstyles.css
@@ -105,13 +105,13 @@
   width: 50%; 
   height: 100%; 
   grid-area: 1 / 1 / 4 / 2;
-  margin: 0;
+  
 } 
 .green4 {
   background-color: green;
   width: 50%; 
   height: 100%; 
-  margin: 0;
+  margin-left: -263px;
 
   grid-area: 1 / 2 / 2 / 3;
 } 
@@ -119,7 +119,7 @@
   background-color: gold; 
   width: 50%; 
   height: 100%; 
-  margin: 0;
+  margin-left: -263px;
 
   grid-area: 2 / 2 / 3 / 3;
 } 
@@ -127,7 +127,7 @@
   background-color: blue; 
   width: 50%; 
   height: 100%; 
-  margin: 0;
+  margin-left: -263px;
 
   grid-area: 3 / 2 / 4 / 3;
 } 
