--- a/positionstyles.css
+++ b/positionstyles.css
@@ -137,7 +137,7 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
@@ -145,16 +145,19 @@
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  position: relative;
+  top: 20px;
+  left: 120px;
 
 } 
 .yellow5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
