--- a/positionstyles.css
+++ b/positionstyles.css
@@ -168,8 +168,8 @@
   /* This is the parent of the activity 6 boxes. */
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 500px; 
+  height: 250px; 
   background-color: red; 
 } 
 .green6 {
@@ -183,9 +183,13 @@
   background-color: gold; 
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 300px; 
+  height: 300px; 
   background-color: blue; 
+  position: relative;
+  top: 10px;
+  left: 350px;
+  
 } 
 
 
