--- a/positionstyles.css
+++ b/positionstyles.css
@@ -142,29 +142,28 @@
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 190px; 
+  height: 190px; 
   background-color: green; 
-  position: relative;
-  top: 0px;
-  left: 0px;
+  float: left;
 
 } 
 .yellow5 {
   width: 100%; 
-  height: 200px; 
+  height: 68%; 
   background-color: gold; 
-  margin-top: -100px;
+  
 } 
 .blue5 {
   width: 100%; 
   height: 100px; 
   background-color: blue; 
-  margin-bottom: 300px;
+  
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
   width: 360px; 
