--- a/positionstyles.css
+++ b/positionstyles.css
@@ -166,29 +166,36 @@
   grid-template-columns: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
-  width: 360px; 
-  height: 150px; 
+  width: 400px; 
+  height: 200px; 
   background-color: red; 
+  grid-column: 1/4;
+  grid-row: 1/3;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green;
+  grid-column: 1/2;
+  grid-row: 4/6;
+  z-index: 1;
   
 } 
 .yellow6 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 5/6;
+  grid-row: 3/6;
+  z-index: 1;
 } 
 .blue6 {
-  width: 350px; 
-  height: 350px; 
+  width: 400px; 
+  height: 40px; 
   background-color: blue; 
   position: relative;
-  top: 10px;
-  left: 130px;
-  margin-top: -287px;
+  grid-column: 2/5;
+  grid-row: 2/5;
   
 } 
 
