--- a/personal/styles.css
+++ b/personal/styles.css
@@ -268,66 +268,29 @@ main .welcome-text {
     font-style: normal;
 }      
 
-.letter:nth-child(1) {
-    color: #FF6347; /* Tomato */
+h1 a:hover .letter {
+    transition: color 0.3s ease;
+    color: #da2020; /* Change all letters to black on hover */
 }
 
-.letter:nth-child(2) {
-    color: #4682B4; /* Steel Blue */
+.letter {
+    animation: colorChange 2s infinite;
 }
 
-.letter:nth-child(3) {
-    color: #32CD32; /* Lime Green */
-}
-
-.letter:nth-child(4) {
-    color: #FFD700; /* Gold */
-}
-
-.letter:nth-child(5) {
-    color: #8A2BE2; /* Blue Violet */
-}
-
-.letter:nth-child(6) {
-    color: #FF4500; /* Orange Red */
-}
-
-.letter:nth-child(7) {
-    color: #DC143C; /* Crimson */
-}
-
-.letter:nth-child(8) {
-    color: #7FFF00; /* Chartreuse */
-}
-
-.letter:nth-child(9) {
-    color: #00BFFF; /* Deep Sky Blue */
-}
-
-.letter:nth-child(10) {
-    color: #FF1493; /* Deep Pink */
-}
-
-.letter:nth-child(11) {
-    color: #20B2AA; /* Light Sea Green */
-}
-
-.letter:nth-child(12) {
-    color: #D2691E; /* Chocolate */
-}
-
-.letter:nth-child(13) {
-    color: #ADFF2F; /* Green Yellow */
-}
-
-.letter:nth-child(14) {
-    color: #FF69B4; /* Hot Pink */
-}
-
-.letter:nth-child(15) {
-    color: #FFD700; /* Gold */
-}
-
-.letter:nth-child(16) {
-    color: #FF8C00; /* Dark Orange */
+@keyframes colorChange {
+    0% {
+        color: #FF6347; /* Tomato */
+    }
+    25% {
+        color: #4682B4; /* Steel Blue */
+    }
+    50% {
+        color: #32CD32; /* Lime Green */
+    }
+    75% {
+        color: #FFD700; /* Gold */
+    }
+    100% {
+        color: #FF6347; /* Tomato */
+    }
 }
