--- a/personal/styles.css
+++ b/personal/styles.css
@@ -175,7 +175,7 @@ header h1 {
     font-weight: 70;
 }
 
-/* .welcome-text {
+/*.welcome-text {
     animation: pulse 1.5s infinite;
 }
 
@@ -193,6 +193,19 @@ header h1 {
         opacity: 1;
     }
 } */
+
+.welcome-text {
+    animation: bounce 2s infinite;
+  }
+
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
 
 
 
